@@ -1,8 +1,12 @@
 SLAVE_RUNNER=/usr/bin/buildslave
 
-SLAVE_ENABLED[1]=0                    # 0-enabled, other-disabled
+# NOTE: SLAVE_ENABLED has changed its behaviour in version 0.8.4. Use
+# 'true|yes|1' to enable instance and 'false|no|0' to disable. Other
+# values will be considered as syntax error.
+
+SLAVE_ENABLED[1]=0                    # 1-enabled, 0-disabled
 SLAVE_NAME[1]="buildslave #1"         # short name printed on start/stop
 SLAVE_USER[1]="buildbot"              # user to run slave as
 SLAVE_BASEDIR[1]=""                   # basedir to slave (absolute path)
-SLAVE_OPTIONS[1]=""                   # buildbot options  
+SLAVE_OPTIONS[1]=""                   # buildbot options
 SLAVE_PREFIXCMD[1]=""                 # prefix command, i.e. nice, linux32, dchroot
